...

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_logout"
                style="@style/DisagreeRoundedButton"
                android:layout_width="wrap_content"
...

            <TextView
                android:id="@+id/tv_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_profile_personal_card_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginEnd="60dp"
                        android:gravity="center"
                        android:text="@string/edit_button"
                        android:textAllCaps="true"
                        android:textSize="20sp"
...

                    <ImageButton
                        android:id="@+id/ib_profile_personal_card_button"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_first_name_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_last_name_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_email_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_phone_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_address_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_personal_postal_code_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_profile_personal_card_update"
                            style="@style/PrimaryRoundedButton"
                            android:layout_width="match_parent"
...

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_insurance_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_profile_insurance_card_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <ImageButton
                        android:id="@+id/ib_profile_insurance_card_button"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
...

                        <TextView
                            android:id="@+id/tv_profile_insurance_card_change_insurance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_company_name_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_company_policy_number_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_company_green_card_number_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_company_insurance_availability_date_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_company_insurance_expiration_date_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_profile_date_time_picker_insurance_certificate_dates"
                            style="@style/PrimaryBottomRoundedButton"
                            android:layout_width="match_parent"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_agency_name_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_agency_email_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_agency_phone_number_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_agency_address_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_profile_insurance_agency_country_value"
                                android:layout_width="match_parent"
