...
    <string name="search_shape_button">Search Shape</string>
    <string name="delete_shape_button">Delete Shape</string>
    <string name="change_address_button">Change Address</string>
    <string name="see_circumstances_button">See circumstances</string>
    <string name="edit_sketch_button">Edit Sketch</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="remove_button">Remove</string>
    <string name="submit_button">Submit</string>
    <string name="logout_button">Logout</string>
    <string name="proceed_button">Proceed</string>
    <string name="revert_button">Revert</string>
...
